ZVP theory fitting mean energy

--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -104,3 +104,17 @@ Equation \ref{eq:intro_sho} clearly describes a simple harmonic oscillator with 
 	\omega_p = \sqrt{\frac{e^2n_e}{m_e \epsilon_0}}.
 \end{equation}
 
+
+
+\section{The Lawson-Woodward theorem}\label{sec:intro-lawson_woodward}
+The Lawson-Woodward theorem states that there can be no net electron energy gain using laser fields \cite{esarey_2009_PhysicsLaserdrivenPlasmabaseda}, quite at odds with one of the primary aims of this thesis, that is, the acceleration of electrons. There are, however, several conditions that must be met, namely,
+\begin{enumerate}
+	\item The interaction region is infinite;
+	\item The interaction  occurs in a vacuum;
+	\item The electron is ultra-relativistic ($v\approx c$) along the acceleration gradient;
+	\item No electro- or magnetostatic fields are present;
+	\item Non-linear effects are neglected.
+\end{enumerate}
+Several of these will be applicable to the various accelerations of electrons considered. It is this final condition that is most damning, throughout this thesis the ultra-relativistic laser pulses under consideration ensure non-linear effects cannot be neglected. It is indeed such non-linearities that are of interest.
+
+
