--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -73,7 +73,7 @@
 
 %%%%% THESIS / TITLE PAGE INFORMATION
 % Everybody needs to complete the following:
-\title{Suitably impressive thesis title}
+\title{The laser-plasma surface interaction: towards attosecond sources of light}
 \author{Robin Timmis}
 \college{Your College}
 
